--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^10.12.3",
+    "date-fns": "^3.6.0",
+    "emoji-mart": "^5.6.0",
+    "firebase": "^10.12.5",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-emoji-picker": "^1.0.13",
     "react-firebase-hooks": "^5.1.1",
     "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
