--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,12 @@
 {
   "short_name": "BigSports",
-  "name": "Create React App Sample",
+  "name": "BigSports - Спортивні новини",
+  "version": "1.0",
   "icons": [
     {
-      "src": "BigSports",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "logo64.png",
+      "sizes": "64x64",
+      "type": "image/png"
     },
     {
       "src": "logo192.png",
