--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "big-sports",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,10 +10,12 @@
     "emoji-mart": "^5.6.0",
     "firebase": "^10.12.5",
     "quill": "^2.0.2",
+    "quill-table": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-emoji-picker": "^1.0.13",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
