--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "date-fns": "^3.6.0",
     "emoji-mart": "^5.6.0",
     "firebase": "^10.12.5",
+    "firebase-admin": "^12.5.0",
+    "node-cron": "^3.0.3",
     "quill": "^2.0.2",
     "quill-table": "^1.0.0",
     "react": "^18.3.1",
