--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-emoji-picker": "^1.0.13",
     "react-firebase-hooks": "^5.1.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
